fix registry unit files

--- a/eos-setup-registry/eos-setup-registry/usr/lib/systemd/system/registry-rw.service
+++ b/eos-setup-registry/eos-setup-registry/usr/lib/systemd/system/registry-rw.service
@@ -1,8 +1,10 @@
 [Unit]
 Description=Activate Container Read/Write Registry
+Before=registry_resize.service
 
 [Service]
 Type=oneshot
+RemainAfterExit=true
 ExecStart=/usr/sbin/set_rw_registry
 
 [Install]
